Ajout de <label>
Ajout de <label> pour faire fonctionner les animations sur les coeurs de chaque card de restaurant

--- a/index.html
+++ b/index.html
@@ -95,11 +95,14 @@
                                     <h3 class="restaurants-card-content-texte-title">La note enchantée</h3>
                                     Charonne
                                 </div>
-                                <div>
-                                    <i class="fa-regular fa-heart over" style="color: #000000;"></i>
-                                    <input type="checkbox" class="anim-trigger">
-                                    <i class="fa-solid fa-heart under"></i>
-                                </div>                </div>
+                                <label>
+                                    <div>
+                                        <i class="fa-regular fa-heart over" style="color: #000000;"></i>
+                                        <input type="checkbox" class="anim-trigger">
+                                        <i class="fa-solid fa-heart under"></i>
+                                    </div>
+                                </label>
+                            </div>
                         </article>
                     </a>
                     <a href="">
@@ -113,11 +116,14 @@
                                     <h3 class="restaurants-card-content-texte-title">A la française</h3>
                                     Cité Rouge
                                 </div>
-                                <div>
-                                    <i class="fa-regular fa-heart over" style="color: #000000;"></i>
-                                    <input type="checkbox" class="anim-trigger">
-                                    <i class="fa-solid fa-heart under"></i>
-                                </div>                </div>
+                                <label>
+                                    <div>
+                                        <i class="fa-regular fa-heart over" style="color: #000000;"></i>
+                                        <input type="checkbox" class="anim-trigger">
+                                        <i class="fa-solid fa-heart under"></i>
+                                    </div>
+                                </label>
+                            </div>
                         </article>
                     </a>
                     <a href="">
@@ -131,11 +137,14 @@
                                     <h3 class="restaurants-card-content-texte-title">Le délice des sens</h3>
                                     Folie-Méricourt
                                 </div>
-                                <div>
-                                    <i class="fa-regular fa-heart over" style="color: #000000;"></i>
-                                    <input type="checkbox" class="anim-trigger">
-                                    <i class="fa-solid fa-heart under"></i>
-                                </div>                </div>
+                                <label>
+                                    <div>
+                                        <i class="fa-regular fa-heart over" style="color: #000000;"></i>
+                                        <input type="checkbox" class="anim-trigger">
+                                        <i class="fa-solid fa-heart under"></i>
+                                    </div>
+                                </label>
+                            </div>
                         </article>
                     </a>
                 </div>
