--- a/index.html
+++ b/index.html
@@ -156,16 +156,9 @@
                 <a href="" class="footer-content-links"><i class="fa-solid fa-utensils" style="color: #ffffff;"></i>Proposer un restaurant</a>
                 <a href="" class="footer-content-links"><i class="fa-solid fa-handshake-angle" style="color: #ffffff;"></i>Devenir partenaire</a>
                 <a href="" class="footer-content-links">Mentions légales</a>
-                <a href="" class="footer-content-links">Contact</a>
+                <a href="mailto:contact@ohmyfood.com" class="footer-content-links">Contact</a>
             </div>
         </footer>
     </div>
-
-<!--     <div class="heart">
-        <i class="fa-regular fa-heart fa-2xl over" style="color: #000000;"></i>
-        <input type="checkbox" class="anim-trigger">
-        <i class="fa-solid fa-heart fa-2xl heart-container under"></i>
-    </div> -->
-
 </body>
 </html>
