--- a/restaurants/La-palette-du-gout.html
+++ b/restaurants/La-palette-du-gout.html
@@ -42,8 +42,8 @@
                     </div>
                     <div class="menu-corps-plats-content">
                         <label>
-                            <div class="menu-corps-plats-content-cardContainer">
-                                <input type="checkbox" class="anim-plats">
+                            <div class="menu-corps-plats-content-cardContainer mixin-call1">
+                                <input type="checkbox" class="anim-coche">
                                 <div class="menu-corps-plats-content-cardContainer-card">
                                     <div class="menu-corps-plats-content-cardContainer-card-content">
                                         <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Fricassée d'escargots avec du bon paing sa mère</h4>
@@ -57,8 +57,8 @@
                             </div>
                         </label>
                         <label>
-                            <div class="menu-corps-plats-content-cardContainer">
-                                <input type="checkbox" class="anim-plats">
+                            <div class="menu-corps-plats-content-cardContainer mixin-call2">
+                                <input type="checkbox" class="anim-coche">
                                 <div class="menu-corps-plats-content-cardContainer-card">
                                     <div class="menu-corps-plats-content-cardContainer-card-content">
                                         <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Foie gras de canard mi-cuit Foie gras de canard mi-cuit</h4>
@@ -72,8 +72,8 @@
                             </div>
                         </label>
                         <label>
-                            <div class="menu-corps-plats-content-cardContainer">
-                                <input type="checkbox" class="anim-plats">
+                            <div class="menu-corps-plats-content-cardContainer mixin-call3">
+                                <input type="checkbox" class="anim-coche">
                                 <div class="menu-corps-plats-content-cardContainer-card">
                                     <div class="menu-corps-plats-content-cardContainer-card-content">
                                         <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Œuf au plat</h4>
@@ -95,8 +95,8 @@
                     </div>
                     <div class="menu-corps-plats-content">
                         <label>
-                            <div class="menu-corps-plats-content-cardContainer">
-                                <input type="checkbox" class="anim-plats">
+                            <div class="menu-corps-plats-content-cardContainer mixin-call4">
+                                <input type="checkbox" class="anim-coche">
                                 <div class="menu-corps-plats-content-cardContainer-card">
                                     <div class="menu-corps-plats-content-cardContainer-card-content">
                                         <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Filet de bœuf aux herbes</h4>
@@ -110,8 +110,8 @@
                             </div>
                         </label>
                         <label>
-                            <div class="menu-corps-plats-content-cardContainer">
-                                <input type="checkbox" class="anim-plats">
+                            <div class="menu-corps-plats-content-cardContainer mixin-call5">
+                                <input type="checkbox" class="anim-coche">
                                 <div class="menu-corps-plats-content-cardContainer-card">
                                     <div class="menu-corps-plats-content-cardContainer-card-content">
                                         <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Parmentier de queue de bœuf</h4>
@@ -125,8 +125,8 @@
                             </div>
                         </label>
                         <label>
-                            <div class="menu-corps-plats-content-cardContainer">
-                                <input type="checkbox" class="anim-plats">
+                            <div class="menu-corps-plats-content-cardContainer mixin-call6">
+                                <input type="checkbox" class="anim-coche">
                                 <div class="menu-corps-plats-content-cardContainer-card">
                                     <div class="menu-corps-plats-content-cardContainer-card-content">
                                         <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Filet de turbot</h4>
@@ -148,8 +148,8 @@
                     </div>
                     <div class="menu-corps-plats-content">
                         <label>
-                            <div class="menu-corps-plats-content-cardContainer">
-                                <input type="checkbox" class="anim-plats">
+                            <div class="menu-corps-plats-content-cardContainer mixin-call7">
+                                <input type="checkbox" class="anim-coche">
                                 <div class="menu-corps-plats-content-cardContainer-card">
                                     <div class="menu-corps-plats-content-cardContainer-card-content">
                                         <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Paris-Brest</h4>
@@ -163,8 +163,8 @@
                             </div>
                         </label>
                         <label>
-                            <div class="menu-corps-plats-content-cardContainer">
-                                <input type="checkbox" class="anim-plats">
+                            <div class="menu-corps-plats-content-cardContainer mixin-call8">
+                                <input type="checkbox" class="anim-coche">
                                 <div class="menu-corps-plats-content-cardContainer-card">
                                     <div class="menu-corps-plats-content-cardContainer-card-content">
                                         <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Macaron au chocolat d'exception</h4>
@@ -178,8 +178,8 @@
                             </div>
                         </label>
                         <label>
-                            <div class="menu-corps-plats-content-cardContainer">
-                                <input type="checkbox" class="anim-plats">
+                            <div class="menu-corps-plats-content-cardContainer mixin-call9">
+                                <input type="checkbox" class="anim-coche">
                                 <div class="menu-corps-plats-content-cardContainer-card">
                                     <div class="menu-corps-plats-content-cardContainer-card-content">
                                         <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Mousse au chocolat</h4>
@@ -205,7 +205,7 @@
                 <a href="" class="footer-content-links"><i class="fa-solid fa-utensils" style="color: #ffffff;"></i>Proposer un restaurant</a>
                 <a href="" class="footer-content-links"><i class="fa-solid fa-handshake-angle" style="color: #ffffff;"></i>Devenir partenaire</a>
                 <a href="" class="footer-content-links">Mentions légales</a>
-                <a href="" class="footer-content-links">Contact</a>
+                <a href="mailto:contact@ohmyfood.com" class="footer-content-links">Contact</a>
             </div>
         </footer>
     </div>
