Pages de restaurants

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             </div>
                         </article>
                     </a>
-                    <a href="">
+                    <a href="restaurants/La-note-enchantee.html">
                         <article class="restaurants-card">
                             <div class="restaurants-card-new">
                                 Nouveau
@@ -105,7 +105,7 @@
                             </div>
                         </article>
                     </a>
-                    <a href="">
+                    <a href="restaurants/A-la-francaise.html">
                         <article class="restaurants-card">
                             <div class="restaurants-card-new">
                                 Nouveau
@@ -126,7 +126,7 @@
                             </div>
                         </article>
                     </a>
-                    <a href="">
+                    <a href="restaurants/Le-delice-des-sens.html">
                         <article class="restaurants-card">
                             <div class="restaurants-card-new">
                                 Nouveau
