--- a/restaurants/Le-delice-des-sens.html
+++ b/restaurants/Le-delice-des-sens.html
@@ -22,11 +22,11 @@
             <img src="../assets/images/logo/ohmyfood.png" alt="Logo de ohmyfood">
             <!-- <div class="header-right"></div> -->
         </header>
-        <img class="background" src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"></img>
+        <img class="background" src="../assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"></img>
         <div class="container-menu">
             <div class="menu">
                 <div class="menu-titre">
-                    <h2>La Palette du gout</h2>
+                    <h2>Le délice des sens</h2>
                     <label>
                         <div>
                             <i class="fa-regular fa-heart over" style="color: #000000;"></i>
@@ -47,8 +47,8 @@
                                     <input type="checkbox" class="anim-coche">
                                     <div class="menu-corps-plats-content-cardContainer-card">
                                         <div class="menu-corps-plats-content-cardContainer-card-content">
-                                            <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Fricassée d'escargots</h4>
-                                            <p class="menu-corps-plats-content-cardContainer-card-content-texte">Au piment d'Espelette</p>
+                                            <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Tartare de thon</h4>
+                                            <p class="menu-corps-plats-content-cardContainer-card-content-texte">Assaisonné au yuzu</p>
                                         </div>
                                         <div class="menu-corps-plats-content-cardContainer-card-prix">25€</div>
                                     </div>
@@ -62,8 +62,8 @@
                                     <input type="checkbox" class="anim-coche">
                                     <div class="menu-corps-plats-content-cardContainer-card">
                                         <div class="menu-corps-plats-content-cardContainer-card-content">
-                                            <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Foie gras de canard mi-cuit</h4>
-                                            <p class="menu-corps-plats-content-cardContainer-card-content-texte">Et ses copeaux de truffe noire</p>
+                                            <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Bouchée de homard croustillant</h4>
+                                            <p class="menu-corps-plats-content-cardContainer-card-content-texte">Et sa farandole de petits légumes</p>
                                         </div>
                                         <div class="menu-corps-plats-content-cardContainer-card-prix">35€</div>
                                     </div>
@@ -77,8 +77,8 @@
                                     <input type="checkbox" class="anim-coche">
                                     <div class="menu-corps-plats-content-cardContainer-card">
                                         <div class="menu-corps-plats-content-cardContainer-card-content">
-                                            <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Œuf au plat</h4>
-                                            <p class="menu-corps-plats-content-cardContainer-card-content-texte">Assaisonné à la truffe sur lit de caviar</p>
+                                            <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Velouté de cèpes</h4>
+                                            <p class="menu-corps-plats-content-cardContainer-card-content-texte">Aux truffes</p>
                                         </div>
                                         <div class="menu-corps-plats-content-cardContainer-card-prix">20€</div>
                                     </div>
@@ -100,8 +100,8 @@
                                     <input type="checkbox" class="anim-coche">
                                     <div class="menu-corps-plats-content-cardContainer-card">
                                         <div class="menu-corps-plats-content-cardContainer-card-content">
-                                            <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Filet de bœuf aux herbes</h4>
-                                            <p class="menu-corps-plats-content-cardContainer-card-content-texte">Accompagné de sa ribambelle de légumes</p>
+                                            <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Poulet rôti aux herbes de Provence</h4>
+                                            <p class="menu-corps-plats-content-cardContainer-card-content-texte">Et sa crème de truffe</p>
                                         </div>
                                         <div class="menu-corps-plats-content-cardContainer-card-prix">40€</div>
                                     </div>
@@ -115,8 +115,8 @@
                                     <input type="checkbox" class="anim-coche">
                                     <div class="menu-corps-plats-content-cardContainer-card">
                                         <div class="menu-corps-plats-content-cardContainer-card-content">
-                                            <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Parmentier de queue de bœuf</h4>
-                                            <p class="menu-corps-plats-content-cardContainer-card-content-texte">À la truffe noire sur sa purée de panais</p>
+                                            <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Langouste rôtie</h4>
+                                            <p class="menu-corps-plats-content-cardContainer-card-content-texte">Et ses légumes de saison</p>
                                         </div>
                                         <div class="menu-corps-plats-content-cardContainer-card-prix">35€</div>
                                     </div>
@@ -130,8 +130,8 @@
                                     <input type="checkbox" class="anim-coche">
                                     <div class="menu-corps-plats-content-cardContainer-card">
                                         <div class="menu-corps-plats-content-cardContainer-card-content">
-                                            <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Filet de turbot</h4>
-                                            <p class="menu-corps-plats-content-cardContainer-card-content-texte">Aux agrumes</p>
+                                            <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Côte de bœuf Angus</h4>
+                                            <p class="menu-corps-plats-content-cardContainer-card-content-texte">Et sa purée de panais</p>
                                         </div>
                                         <div class="menu-corps-plats-content-cardContainer-card-prix">44€</div>
                                     </div>
@@ -153,8 +153,8 @@
                                     <input type="checkbox" class="anim-coche">
                                     <div class="menu-corps-plats-content-cardContainer-card">
                                         <div class="menu-corps-plats-content-cardContainer-card-content">
-                                            <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Paris-Brest</h4>
-                                            <p class="menu-corps-plats-content-cardContainer-card-content-texte">Revisité</p>
+                                            <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Farandole de desserts</h4>
+                                            <p class="menu-corps-plats-content-cardContainer-card-content-texte">Du chef</p>
                                         </div>
                                         <div class="menu-corps-plats-content-cardContainer-card-prix">18€</div>
                                     </div>
@@ -168,8 +168,8 @@
                                     <input type="checkbox" class="anim-coche">
                                     <div class="menu-corps-plats-content-cardContainer-card">
                                         <div class="menu-corps-plats-content-cardContainer-card-content">
-                                            <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Macaron au chocolat d'exception</h4>
-                                            <p class="menu-corps-plats-content-cardContainer-card-content-texte">Et glace à la vanille de Madagascar</p>
+                                            <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Crème brulée</h4>
+                                            <p class="menu-corps-plats-content-cardContainer-card-content-texte">Revisitée</p>
                                         </div>
                                         <div class="menu-corps-plats-content-cardContainer-card-prix">22€</div>
                                     </div>
@@ -183,8 +183,8 @@
                                     <input type="checkbox" class="anim-coche">
                                     <div class="menu-corps-plats-content-cardContainer-card">
                                         <div class="menu-corps-plats-content-cardContainer-card-content">
-                                            <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Mousse au chocolat</h4>
-                                            <p class="menu-corps-plats-content-cardContainer-card-content-texte">Au piment d'Espelette et à la truffe noire</p>
+                                            <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Tiramisu</h4>
+                                            <p class="menu-corps-plats-content-cardContainer-card-content-texte">À la noisette</p>
                                         </div>
                                         <div class="menu-corps-plats-content-cardContainer-card-prix">23€</div>
                                     </div>
