--- a/restaurants/La-note-enchantee.html
+++ b/restaurants/La-note-enchantee.html
@@ -22,11 +22,11 @@
             <img src="../assets/images/logo/ohmyfood.png" alt="Logo de ohmyfood">
             <!-- <div class="header-right"></div> -->
         </header>
-        <img class="background" src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"></img>
+        <img class="background" src="../assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"></img>
         <div class="container-menu">
             <div class="menu">
                 <div class="menu-titre">
-                    <h2>La Palette du gout</h2>
+                    <h2>La note enchantée</h2>
                     <label>
                         <div>
                             <i class="fa-regular fa-heart over" style="color: #000000;"></i>
@@ -47,8 +47,8 @@
                                     <input type="checkbox" class="anim-coche">
                                     <div class="menu-corps-plats-content-cardContainer-card">
                                         <div class="menu-corps-plats-content-cardContainer-card-content">
-                                            <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Fricassée d'escargots</h4>
-                                            <p class="menu-corps-plats-content-cardContainer-card-content-texte">Au piment d'Espelette</p>
+                                            <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Ravioles de foie gras</h4>
+                                            <p class="menu-corps-plats-content-cardContainer-card-content-texte">Accompagnées de leur crème à la truffe</p>
                                         </div>
                                         <div class="menu-corps-plats-content-cardContainer-card-prix">25€</div>
                                     </div>
@@ -62,8 +62,8 @@
                                     <input type="checkbox" class="anim-coche">
                                     <div class="menu-corps-plats-content-cardContainer-card">
                                         <div class="menu-corps-plats-content-cardContainer-card-content">
-                                            <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Foie gras de canard mi-cuit</h4>
-                                            <p class="menu-corps-plats-content-cardContainer-card-content-texte">Et ses copeaux de truffe noire</p>
+                                            <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Caviar osciètre</h4>
+                                            <p class="menu-corps-plats-content-cardContainer-card-content-texte">Sur blini à la farine de blé noir</p>
                                         </div>
                                         <div class="menu-corps-plats-content-cardContainer-card-prix">35€</div>
                                     </div>
@@ -77,8 +77,8 @@
                                     <input type="checkbox" class="anim-coche">
                                     <div class="menu-corps-plats-content-cardContainer-card">
                                         <div class="menu-corps-plats-content-cardContainer-card-content">
-                                            <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Œuf au plat</h4>
-                                            <p class="menu-corps-plats-content-cardContainer-card-content-texte">Assaisonné à la truffe sur lit de caviar</p>
+                                            <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Homard et espuma de potiron</h4>
+                                            <p class="menu-corps-plats-content-cardContainer-card-content-texte">Marinés aux zestes d'orange</p>
                                         </div>
                                         <div class="menu-corps-plats-content-cardContainer-card-prix">20€</div>
                                     </div>
@@ -86,7 +86,22 @@
                                         <i class="fa-solid fa-circle-check"></i>
                                     </div>
                                 </div>
-                            </label>         
+                            </label>
+                            <label>
+                                <div class="menu-corps-plats-content-cardContainer mixin-call4">
+                                    <input type="checkbox" class="anim-coche">
+                                    <div class="menu-corps-plats-content-cardContainer-card">
+                                        <div class="menu-corps-plats-content-cardContainer-card-content">
+                                            <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Foie gras de canard cuit entier</h4>
+                                            <p class="menu-corps-plats-content-cardContainer-card-content-texte">Confiture de figue et pain toasté</p>
+                                        </div>
+                                        <div class="menu-corps-plats-content-cardContainer-card-prix">35€</div>
+                                    </div>
+                                    <div class="menu-corps-plats-content-cardContainer-divAnim">
+                                        <i class="fa-solid fa-circle-check"></i>
+                                    </div>
+                                </div>
+                            </label>  
                         </div>
                     </div>
                     <div class="menu-corps-plats">
@@ -96,29 +111,14 @@
                         </div>
                         <div class="menu-corps-plats-content">
                             <label>
-                                <div class="menu-corps-plats-content-cardContainer mixin-call4">
-                                    <input type="checkbox" class="anim-coche">
-                                    <div class="menu-corps-plats-content-cardContainer-card">
-                                        <div class="menu-corps-plats-content-cardContainer-card-content">
-                                            <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Filet de bœuf aux herbes</h4>
-                                            <p class="menu-corps-plats-content-cardContainer-card-content-texte">Accompagné de sa ribambelle de légumes</p>
-                                        </div>
-                                        <div class="menu-corps-plats-content-cardContainer-card-prix">40€</div>
-                                    </div>
-                                    <div class="menu-corps-plats-content-cardContainer-divAnim">
-                                        <i class="fa-solid fa-circle-check"></i>
-                                    </div>
-                                </div>
-                            </label>
-                            <label>
                                 <div class="menu-corps-plats-content-cardContainer mixin-call5">
                                     <input type="checkbox" class="anim-coche">
                                     <div class="menu-corps-plats-content-cardContainer-card">
                                         <div class="menu-corps-plats-content-cardContainer-card-content">
-                                            <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Parmentier de queue de bœuf</h4>
-                                            <p class="menu-corps-plats-content-cardContainer-card-content-texte">À la truffe noire sur sa purée de panais</p>
+                                            <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Noix de coquilles Saint-Jacques</h4>
+                                            <p class="menu-corps-plats-content-cardContainer-card-content-texte">Sur lit de purée de céleri-rave</p>
                                         </div>
-                                        <div class="menu-corps-plats-content-cardContainer-card-prix">35€</div>
+                                        <div class="menu-corps-plats-content-cardContainer-card-prix">40€</div>
                                     </div>
                                     <div class="menu-corps-plats-content-cardContainer-divAnim">
                                         <i class="fa-solid fa-circle-check"></i>
@@ -130,10 +130,25 @@
                                     <input type="checkbox" class="anim-coche">
                                     <div class="menu-corps-plats-content-cardContainer-card">
                                         <div class="menu-corps-plats-content-cardContainer-card-content">
-                                            <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Filet de turbot</h4>
-                                            <p class="menu-corps-plats-content-cardContainer-card-content-texte">Aux agrumes</p>
+                                            <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Langoustine poêlée</h4>
+                                            <p class="menu-corps-plats-content-cardContainer-card-content-texte">Purée de patate douce</p>
                                         </div>
-                                        <div class="menu-corps-plats-content-cardContainer-card-prix">44€</div>
+                                        <div class="menu-corps-plats-content-cardContainer-card-prix">35€</div>
+                                    </div>
+                                    <div class="menu-corps-plats-content-cardContainer-divAnim">
+                                        <i class="fa-solid fa-circle-check"></i>
+                                    </div>
+                                </div>
+                            </label>
+                            <label>
+                                <div class="menu-corps-plats-content-cardContainer mixin-call7">
+                                    <input type="checkbox" class="anim-coche">
+                                    <div class="menu-corps-plats-content-cardContainer-card">
+                                        <div class="menu-corps-plats-content-cardContainer-card-content">
+                                            <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Mijoté de queue de bœuf</h4>
+                                            <p class="menu-corps-plats-content-cardContainer-card-content-texte">Et riz sauvage aux zestes de citron</p>
+                                        </div>
+                                        <div class="menu-corps-plats-content-cardContainer-card-prix">45€</div>
                                     </div>
                                     <div class="menu-corps-plats-content-cardContainer-divAnim">
                                         <i class="fa-solid fa-circle-check"></i>
@@ -149,29 +164,14 @@
                         </div>
                         <div class="menu-corps-plats-content">
                             <label>
-                                <div class="menu-corps-plats-content-cardContainer mixin-call7">
-                                    <input type="checkbox" class="anim-coche">
-                                    <div class="menu-corps-plats-content-cardContainer-card">
-                                        <div class="menu-corps-plats-content-cardContainer-card-content">
-                                            <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Paris-Brest</h4>
-                                            <p class="menu-corps-plats-content-cardContainer-card-content-texte">Revisité</p>
-                                        </div>
-                                        <div class="menu-corps-plats-content-cardContainer-card-prix">18€</div>
-                                    </div>
-                                    <div class="menu-corps-plats-content-cardContainer-divAnim">
-                                        <i class="fa-solid fa-circle-check"></i>
-                                    </div>
-                                </div>
-                            </label>
-                            <label>
                                 <div class="menu-corps-plats-content-cardContainer mixin-call8">
                                     <input type="checkbox" class="anim-coche">
                                     <div class="menu-corps-plats-content-cardContainer-card">
                                         <div class="menu-corps-plats-content-cardContainer-card-content">
-                                            <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Macaron au chocolat d'exception</h4>
-                                            <p class="menu-corps-plats-content-cardContainer-card-content-texte">Et glace à la vanille de Madagascar</p>
+                                            <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Macaron noisette et chocolat</h4>
+                                            <p class="menu-corps-plats-content-cardContainer-card-content-texte">Glace au caramel brun et sel de Guérande</p>
                                         </div>
-                                        <div class="menu-corps-plats-content-cardContainer-card-prix">22€</div>
+                                        <div class="menu-corps-plats-content-cardContainer-card-prix">18€</div>
                                     </div>
                                     <div class="menu-corps-plats-content-cardContainer-divAnim">
                                         <i class="fa-solid fa-circle-check"></i>
@@ -183,8 +183,23 @@
                                     <input type="checkbox" class="anim-coche">
                                     <div class="menu-corps-plats-content-cardContainer-card">
                                         <div class="menu-corps-plats-content-cardContainer-card-content">
-                                            <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Mousse au chocolat</h4>
-                                            <p class="menu-corps-plats-content-cardContainer-card-content-texte">Au piment d'Espelette et à la truffe noire</p>
+                                            <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Baba au rhum revisité</h4>
+                                            <p class="menu-corps-plats-content-cardContainer-card-content-texte">Avec son coulis de citron</p>
+                                        </div>
+                                        <div class="menu-corps-plats-content-cardContainer-card-prix">22€</div>
+                                    </div>
+                                    <div class="menu-corps-plats-content-cardContainer-divAnim">
+                                        <i class="fa-solid fa-circle-check"></i>
+                                    </div>
+                                </div>
+                            </label>
+                            <label>
+                                <div class="menu-corps-plats-content-cardContainer mixin-call10">
+                                    <input type="checkbox" class="anim-coche">
+                                    <div class="menu-corps-plats-content-cardContainer-card">
+                                        <div class="menu-corps-plats-content-cardContainer-card-content">
+                                            <h4 class="menu-corps-plats-content-cardContainer-card-content-titre">Tarte au citron meringuée</h4>
+                                            <p class="menu-corps-plats-content-cardContainer-card-content-texte">Déstructurée</p>
                                         </div>
                                         <div class="menu-corps-plats-content-cardContainer-card-prix">23€</div>
                                     </div>
