Correctif end tag img

--- a/restaurants/A-la-francaise.html
+++ b/restaurants/A-la-francaise.html
@@ -22,7 +22,7 @@
             <img src="../assets/images/logo/ohmyfood.png" alt="Logo de ohmyfood">
             <!-- <div class="header-right"></div> -->
         </header>
-        <img class="background" src="../assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"></img>
+        <img class="background" src="../assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg">
         <div class="container-menu">
             <div class="menu">
                 <div class="menu-titre">
