--- a/restaurants/Le-delice-des-sens.html
+++ b/restaurants/Le-delice-des-sens.html
@@ -22,7 +22,7 @@
             <img src="../assets/images/logo/ohmyfood.png" alt="Logo de ohmyfood">
             <!-- <div class="header-right"></div> -->
         </header>
-        <img class="background" src="../assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"></img>
+        <img class="background" src="../assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg">
         <div class="container-menu">
             <div class="menu">
                 <div class="menu-titre">
