--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
                     </article>
                     <article class="restaurants-card">
                         <a href="restaurants/A-la-francaise.html">
-                            <div class="restaurants-card-new">
+<!--                             <div class="restaurants-card-new">
                                 Nouveau
-                            </div>
+                            </div> -->
                             <img src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Resto">
                         </a>
                         <div class="restaurants-card-content">
@@ -128,9 +128,9 @@
                     </article>
                     <article class="restaurants-card">
                         <a href="restaurants/Le-delice-des-sens.html">
-                            <div class="restaurants-card-new">
+<!--                             <div class="restaurants-card-new">
                                 Nouveau
-                            </div>
+                            </div> -->
                             <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Resto">
                         </a>
                         <div class="restaurants-card-content">
